various additions to agent tracking